[gd_scene load_steps=3 format=3 uid="uid://v25n41i6nk2g"]

[ext_resource type="Script" uid="uid://cacxvkvf3ckko" path="res://menus/car_selection_panel.gd" id="1_ltqwo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buroj"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 0)

[node name="CarSelectionPanel" type="PanelContainer"]
custom_minimum_size = Vector2(150, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_buroj")
script = ExtResource("1_ltqwo")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(150, 150)
render_target_update_mode = 4

[node name="Name" type="Label" parent="SubViewportContainer/SubViewport"]
visible = false
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 18
text = "Player"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
